# Trieste-LF-Analyses

./: .clang-format  .gitignore  CMakeLists.txt  README.md
AnalysisCore/: CMakeLists.txt  LinkDef.h
AnalysisCore/include/: EfficiencyHandler.h  JSONReader.h  LFInvMassFitter.h  LinkDef.h  ObjectHandler.h  THnSparseProjector.h
AnalysisCore/src/: EfficiencyHandler.cpp  JSONReader.cpp  LFInvMassFitter.cpp  ObjectHandler.cpp  THnSparseProjector.cpp
AnalysisSte/: CMakeLists.txt  PhiK0SAnalysis.cpp  PhiK0SAnalysis1.cpp  PhiK0SAnalysis2.cpp  PhiK0SAnalysis3.cpp  config.json  configK0S.json  configPi.json
AnalysisUtils/: AxesUtils.h  CMakeLists.txt  FitFunctions.h  Parameters.h  ParticleTypes.h  Plot.h  Projections.h
LFInvMassFitter/: Fitter.cpp  SignalExtraction.cpp  SignalExtraction.h  fitDataAndMCClosure2D.C
LFInvMassFitter/include/: Fitter.h  LinkDef.h
LFInvMassFitter/src/: Fitter.cpp
